--- a/app/views/students/new.html.erb
+++ b/app/views/students/new.html.erb
@@ -1,1 +1,10 @@
-<!-- Create your form here -->
+
+<h1>Student Form</h1>
+
+<%= form_tag '/students' do %>
+    <br><%= label_tag 'Enter student first name:' %><br>
+    <br><%= text_field_tag 'first_name' %><br>
+    <br><%= label_tag 'Enter student last name:' %><br>
+    <br><%= text_field_tag 'last_name' %><br>
+    <br><%= submit_tag 'Submit Student' %><br>
+<% end %>
